refactor : [refactor/#11/testCodeRefactor]
database mapping 으로 인한 test code 변경